--- a/index.html
+++ b/index.html
@@ -2,5 +2,31 @@
 <header><title>My notebook</title></header>
 <body>
 <h1>My notebook</h1>
+
+26.04.2014
+
+Rec 2:
+New repo was created.
+
+git clone https://github.com/abtv/abtv.github.io.git
+vim index.html
+git add index.html
+git commit -a -m "page was created"
+git remote add origin https://github.com/abtv/abtv.github.io.git
+git push -u origin master
+
+Rec 1:
+Setting up Oh my szh
+
+sudo apt-get install zsh
+vim ~.bashrc and insert line "exec zsh" without quotes
+sudo shutdown -r now
+wget https://github.com/robbyrussell/oh-my-zsh/raw/master/tools/install.sh -O - | zsh
+restart terminal
+
+
+
+
+
 </body>
 </html>
