--- a/index.html
+++ b/index.html
@@ -58,17 +58,28 @@ $ git checkout gh-pages
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
 <p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
 
-    
 
-  </body>
-</html>
+
+
+Rec 2:
+New repo was created.
+
+git clone https://github.com/abtv/abtv.github.io.git
+vim index.html
+git add index.html
+git commit -a -m "page was created"
+git remote add origin https://github.com/abtv/abtv.github.io.git
+git push -u origin master
+
+Rec 1:
+Setting up Oh my szh
+
+sudo apt-get install zsh
+vim ~.bashrc and insert line "exec zsh" without quotes
+sudo shutdown -r now
+wget https://github.com/robbyrussell/oh-my-zsh/raw/master/tools/install.sh -O - | zsh
+restart terminal
+
+
