New issues were added

--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
       <section id="main_content" class="inner">
         
 
+<h3>Issue 5: Using NoSQL solutions for storing and retrieving data from crawled sites</h3>
 
+<h3>Issue 4: Simple article model for classification</h3>
+
+<h3>Issue 3: Setting up scala build tools</h3>
 
 
 <h3>Issue 2: New repo was created.</h3>
