Aliases issue was added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
           <h1 id="project_title">abtv</h1>
-          <h2 id="project_tagline">My notepad - succinct issues and thoughts and (often) solutions</h2>
+          <h2 id="project_tagline">My notepad - succinct issues, thoughts and solutions</h2>
         </header>
     </div>
 
@@ -25,6 +25,45 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         
+  
+
+</br>
+</br>
+</br>
+27.04.2014
+<h3>Issue 7: Speed up your work with git: adorable aliases can simplify typing</h3>
+Execute
+<pre><code>vim .bashrc</code></pre>
+or (if you use zsh)
+<pre><code>vim .zshrc</code></pre>
+<p>
+and type</br>
+
+#git aliases</br>
+alias ga="git add "</br>
+alias gb="git branch "</br>
+alias gca="git commit -a -m "</br>
+alias gch="git checkout "</br>
+alias gd="git diff "</br>
+alias gl="git log "</br>
+alias gpl="git pull "</br>
+alias gps="git push "</br>
+alias gs="git status "
+</p>
+
+<h3>Issue 6: Using vim to copy and paste text</h3>
+Simple commands:</br>
+  1. Type yy to copy single line</br>
+  2. Type p to paste text from clipboard</br>
+  3. Type dd to delete single line (and copy it to clipboard)</br>
+  4. Type u to undo last change</br>
+  5. Press Ctrl+R to undo "undo change"</br>
+</br>
+Selection commands:</br>
+  1. First press Shift+V to select lines and then press y to copy it all</br>
+  2. Then press p to insert selected lines 
+
+
 
 <h3>Issue 5: Using NoSQL solutions for storing and retrieving data from crawled sites</h3>
 
@@ -32,8 +71,12 @@
 
 <h3>Issue 3: Setting up scala build tools</h3>
 
+</br>
+</br>
+</br>
+26.04.2014
 
-<h3>Issue 2: New repo was created.</h3>
+<h3>Issue 2: New repo was created</h3>
 <pre><code>git clone https://github.com/abtv/abtv.github.io.git
 vim index.html
 git add index.html
