--- a/index.html
+++ b/index.html
@@ -33,11 +33,13 @@
 27.04.2014
 
 
+<h3>Issue 10: Using MongoDB for storing and retrieving data from crawled sites</h3>
 
 
-<h3>Issue 5: Using NoSQL solution for storing and retrieving data from crawled sites</h3>
+</br>
+</br>
 
-<h3>Issue 4: Simple model for the classification of articles</h3>
+<h3>Issue 9: Simple model for the classification of articles</h3>
 First, let's define a simple class, which represents news or scientific article 
 <pre><code>class Article(val url, val title, val text)
 </code></pre>
@@ -62,6 +64,8 @@ Let's extend our Article class to
 
 }
 </code></pre>
+</br>
+</br>
 
 
 <h3>Issue 8: Adding mongodb support to scala project</h3>
@@ -183,5 +187,5 @@ and insert line "exec zsh" without quotes</br>
 wget https://github.com/robbyrussell/oh-my-zsh/raw/master/tools/install.sh -O - | zsh
 </code></pre>
 <p>	
-All you need - simply restart terminal
+All you need is simply restart terminal
 </p>
