--- a/index.html
+++ b/index.html
@@ -70,14 +70,12 @@ Let's extend our Article class to
 
 <h3>Issue 8: Adding mongodb support to scala project</h3>
 Append to your's pom file
-<pre><code>
-<dependency>
-  <groupId> org.mongodb</groupId>
-  <artifactId>casbah_2.10</artifactId>
-  <version>2.7.0</version>
-  <type>pom</type>
-</dependency>
-</code></pre>
+<pre><code>&lt;dependency&gt;
+  &lt;groupId&gt;org.mongodb&lt;/groupId&gt;
+  &lt;artifactId&gt;casbah_2.10&lt;/artifactId&gt;
+  &lt;version&gt;2.7.0&lt;/version&gt;
+  &lt;type&gt;pom&lt;/type&gt;
+&lt;/dependency&gt;</code></pre>
 </br>
 </br>
 
