Describes installation the Scala IDE

--- a/index.html
+++ b/index.html
@@ -30,12 +30,20 @@
 </br>
 </br>
 </br>
+
 27.04.2014
+<h3>Issue 11: Using MongoDB for storing and retrieving data from crawled sites</h3>
 
 
-<h3>Issue 10: Using MongoDB for storing and retrieving data from crawled sites</h3>
+</br>
+</br>
 
 
+27.04.2014
+<h3>Issue 10: Setting up Scala IDE for Eclipse</h3>
+1. Open http://scala-ide.org/download/sdk.html and select Linux GTK 64-bit</br>
+2. Extract archive to /home/andrew/programs/eclipse</br>
+3. Double click on file eclipse
 </br>
 </br>
 
