--- a/index.html
+++ b/index.html
@@ -32,7 +32,21 @@
 </br>
 
 28.04.2014
-<h3>Issue 11: Using MongoDB for storing and retrieving data from crawled sites</h3>
+<h3>Issue 12: Using MongoDB for storing and retrieving data from crawled sites</h3>
+
+<h3>Issue 11: Some MongoDB commands</h3>
+1. db.version() - shows current version mongodb</br>
+2. db.stats() - shows current database's statistics</br>
+3. db.items.insert({name: "andrew", age: 30}) - inserts object in collection "items". If the collection does not exist, then the insert() method will create the collection.</br>
+4. db.items.find() - performs search</br>
+5. db.items.find({age: {$gt: 29}}) - search with filter</br>
+6. </br>
+7. </br>
+
+
+
+
+
 
 
 </br>
