--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
 </br>
 
 30.04.2014
-dpkg -l | grep scala - searchs all packages, which names contains scala
-
+<h3>Issue 11: Some dpkg and vim</h3>
+dpkg -l | grep scala - searchs all packages, which names contains scala</br>
+sudo dpkg -i robomongo.deb - install robomongo</br>
+sudo dpkg -r robomongo</br>
+la | vim -   minus enables read from stdin
 
 </br>
 </br>
