--- a/index.html
+++ b/index.html
@@ -31,6 +31,19 @@
 </br>
 </br>
 
+02.05.2014
+<h3>Issue 12: Git's problem</h3>
+Problem:</br>
+updates were rejected because a pushed branch tip is behind its remote counterpart.
+Checkout this branch and integrate remote changes (e.g. git pull ...) before pushing again</br>
+Solution:</br>
+Check your commit. If it isn't master, then checkout master and pull changes into master.</br>
+Merege master with your previous commit, resolve conflicts and push changes.
+
+
+</br>
+</br>
+
 30.04.2014
 <h3>Issue 11: Some dpkg and vim</h3>
 dpkg -l | grep scala - searchs all packages, which names contains scala</br>
