--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 </br>
 </br>
 
+<h2>Mongo week</h2>
+
 02.05.2014
 <h3>Issue 13: Sql's analogs in mongo</h3>
 db.pages.find({}, {url: 1, themes: 1})</br>
