First week was renamed

--- a/index1.html
+++ b/index1.html
@@ -25,13 +25,13 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         
-  
+<a href="index.html">Go to Scala week</a>  
 
 </br>
 </br>
 </br>
 
-<h2>Mongo week</h2>
+<h2>Mongo & Git week</h2>
 
 02.05.2014
 <h3>Issue 13: Sql's analogs in mongo</h3>
