LIttle about git

--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
 
 		<h2>Scala week</h2>
 
+		08.05.2014
+		<h3>Issue 17: Little about git</h3>
+		git pull --all - pulls all branches from remote</br>
+		git branch -a - shows all branches (including remote)
+
+		</br>
+		</br>
+
 		05.05.2014
 		<h3>Issue 16: Tiny DSL (hmm, implicits is a grenade in monkey's hands)</h3>
 
