about getting new branch

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
 		08.05.2014
 		<h3>Issue 17: Little about git</h3>
+		git checkout -b newdesign origin/newdesign - pulls branch newdesign (not existing yet on local) from origin</br>
 		git pull --all - pulls all branches from remote</br>
 		git branch -a - shows all branches (including remote)
 
