Installing Sublime text 3

--- a/index.html
+++ b/index.html
@@ -34,6 +34,15 @@
 
 		<h2>Scala week</h2>
 
+		09.05.2014
+		<h3>Installing sublime text 3</h3>
+		sudo add-apt-repository ppa:webupd8team/sublime-text-3</br>
+		sudo apt-get update</br>
+		sudo apt-get install sublime-text-installer
+		</br>
+		</br>
+
+
 		08.05.2014
 		<h3>Issue 18: error /usr/bin/env: node: No such file or directory</h3>
 		Some linux distributions install nodejs not as "node" executable but as "nodejs".</br>
