--- a/index1.html
+++ b/index1.html
@@ -189,6 +189,7 @@ git push -u origin master
 
 <h3>
 Issue 1: Setting up Oh my zsh
+Firstly, you need git installed on your ubuntu
 </h3>
 <pre><code>sudo apt-get install zsh
 </code></pre>
