About installing JDK

--- a/index.html
+++ b/index.html
@@ -35,7 +35,12 @@
 		<h2>Scala week</h2>
 
 		09.05.2014
-		<h3>Installing sublime text 3</h3>
+		<h3>Issue 20: Installing JDK on Ubuntu</h3>
+		sudo apt-get install openjdk-7-jdk
+		</br>
+		</br>
+
+		<h3>Issue 19: Installing sublime text 3</h3>
 		sudo add-apt-repository ppa:webupd8team/sublime-text-3</br>
 		sudo apt-get update</br>
 		sudo apt-get install sublime-text-installer
